--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,10 @@
 .select {
     margin-left: 50px;
 }
+
+.summary-label{
+  font-weight: bold;
+}
 /* Creates a small triangle extender for the tooltip */
 /*.d3-tooltip::before {
   left: 45px;
